--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Happy Birthday Divv ❤️</title>
+<title>For You ❤️</title>
 
 <style>
+*{box-sizing:border-box}
+
 body{
   margin:0;
   min-height:100vh;
@@ -12,122 +14,224 @@ body{
   display:flex;
   justify-content:center;
   align-items:center;
-  font-family:'Poppins',sans-serif;
+  font-family:'Segoe UI',sans-serif;
   overflow-x:hidden;
 }
 
+/* CARD */
 .card{
-  background:white;
-  padding:25px;
-  border-radius:20px;
+  background:rgba(255,255,255,0.95);
+  padding:28px;
+  border-radius:24px;
   width:90%;
   max-width:420px;
   text-align:center;
-  box-shadow:0 20px 40px rgba(0,0,0,0.25);
+  box-shadow:0 30px 60px rgba(0,0,0,0.25);
+  position:relative;
+  z-index:2;
+  animation:cardIn 1.2s ease;
 }
 
+@keyframes cardIn{
+  from{opacity:0; transform:scale(0.9) translateY(40px)}
+  to{opacity:1; transform:scale(1) translateY(0)}
+}
+
+/* TITLE */
 h1{
   color:#ff4d6d;
-  margin-bottom:10px;
+  margin-bottom:8px;
+  animation:pulse 2.5s infinite;
 }
 
-.tap{
-  font-size:12px;
-  color:gray;
-  margin-bottom:10px;
+@keyframes pulse{
+  0%,100%{transform:scale(1)}
+  50%{transform:scale(1.05)}
 }
 
-#text{
-  font-size:17px;
-  color:#333;
-  min-height:180px;
+/* MUSIC HINT – SHOWS ON LOAD */
+#musicStart{
+  font-size:14px;
+  color:#ff4d6d;
+  margin-bottom:14px;
+  animation:blink 2s infinite;
 }
 
-img{
+@keyframes blink{
+  0%{opacity:0.3}
+  50%{opacity:1}
+  100%{opacity:0.3}
+}
+
+/* MESSAGE */
+#msg{
+  font-size:16px;
+  color:#444;
+  margin-bottom:22px;
+  white-space:pre-line;
+  line-height:1.6;
+}
+
+/* BUTTON */
+.btn{
+  padding:14px 28px;
+  border:none;
+  border-radius:40px;
+  background:linear-gradient(135deg,#ff4d6d,#ff758f);
+  color:white;
+  font-size:18px;
+  cursor:pointer;
+  box-shadow:0 10px 20px rgba(255,77,109,0.4);
+  transition:all 0.5s ease;
+}
+
+.btn:hover{
+  transform:translateY(-3px) scale(1.05);
+}
+
+.btn.hide{
+  opacity:0;
+  transform:scale(0.8);
+  pointer-events:none;
+}
+
+/* CLICK LINE */
+#clickMsg{
+  display:none;
+  margin-top:14px;
+  font-size:15px;
+  color:#ff4d6d;
+  opacity:0;
+  transition:opacity 1.2s ease;
+}
+
+/* PHOTOS */
+#photos{ margin-top:25px; }
+
+.photo{
+  opacity:0;
+  transform:translateY(40px) scale(0.95);
+  transition:all 1s ease;
+}
+
+.photo.show{
+  opacity:1;
+  transform:translateY(0) scale(1);
+}
+
+.photo img{
   width:100%;
-  border-radius:15px;
-  margin-top:15px;
+  border-radius:18px;
+  margin-bottom:20px;
+  box-shadow:0 18px 35px rgba(0,0,0,0.25);
 }
 
+/* FLOATING HEARTS */
 .heart{
   position:fixed;
-  bottom:-10px;
-  color:red;
-  font-size:20px;
-  animation: float 6s linear infinite;
+  bottom:-30px;
+  color:#ff4d6d;
+  opacity:0.7;
+  animation:floatUp linear forwards;
+  pointer-events:none;
+  z-index:1;
 }
 
-@keyframes float{
-  from{transform:translateY(0); opacity:1;}
-  to{transform:translateY(-100vh); opacity:0;}
+@keyframes floatUp{
+  from{transform:translateY(0) scale(1); opacity:0.8}
+  to{transform:translateY(-120vh) scale(1.6); opacity:0}
 }
 </style>
 </head>
 
 <body>
 
-<!-- YouTube music will load AFTER first click -->
-<div id="yt"></div>
-
 <div class="card">
-  <div class="tap">Tap anywhere for music 🎶</div>
+  <h1>💖 Happy Birthday 💖</h1>
+  <div id="msg">
+My Love — Divv Ji (Ladduu, Motuu Bacchaa) 🐼❤️
 
-  <h1>🎉 Happy Birthday Divv 🎉</h1>
+No Matter How Far You Are, My Heart Knows Where It Belongs 💌  
+Every Day, Every Moment, Every Feeling —  
+It Quietly Finds Its Way Back To You.... 🫂💗
+This Little Space Is Made Just For You 🫶  
+With All My Love, My Care, And Every Thought Of You 🥰  
+Everything Here Holds A Piece Of What I Feel For You ....💖
 
-  <p id="text"></p>
+I Miss Youuuuuu 🥺  
+I Love Youuuu Endlessly, Deeply, Truly ❤️  
+— Yours, Sneha
+  </div>
 
-  <img src="photo1.jpg" alt="us">
-  <img src="photo2.jpg" alt="us">
+<!-- MUSIC HINT (VISIBLE FIRST) -->
+  <div id="musicStart">🎶 Please Tap “Open My Heart” bubuuu....</div>
+  <button id="clickBtn" class="btn" onclick="reveal()">
+    Open My Heart 💖
+  </button>
+
+  <div id="clickMsg">Scroll slowly… every memory is waiting 💕</div>
+
+  <div id="photos">
+    <div class="photo"><img src="photo1.jpg"></div>
+    <div class="photo"><img src="photo2.jpg"></div>
+    <div class="photo"><img src="photo3.jpg"></div>
+    <div class="photo"><img src="photo4.jpg"></div>
+    <div class="photo"><img src="photo5.jpg"></div>
+    <div class="photo"><img src="photo6.jpg"></div>
+    <div class="photo"><img src="photo7.jpg"></div>
+    <div class="photo"><img src="photo8.jpg"></div>
+    <div class="photo"><img src="photo9.jpg"></div>
+    <div class="photo"><img src="photo10.jpg"></div>
+    <div class="photo"><img src="photo11.jpg"></div>
+    <div class="photo"><img src="photo12.jpg"></div>
+    <div class="photo"><img src="photo13.jpg"></div>
+    <div class="photo"><img src="photo14.jpg"></div>
+    <div class="photo"><img src="photo15.jpg"></div>
+    <div class="photo"><img src="photo16.jpg"></div>
+    <div class="photo"><img src="photo17.jpg"></div>
+    <div class="photo"><img src="photo18.jpg"></div>
+  </div>
 </div>
 
+<div id="yt"></div>
+
 <script>
-// MUSIC – plays after first click
-document.body.addEventListener("click", function () {
-  if (!document.getElementById("player")) {
-    document.getElementById("yt").innerHTML = `
-    <iframe id="player"
-      width="0"
-      height="0"
-      src="https://www.youtube.com/embed/-d9nvq3402M?autoplay=1&loop=1&playlist=-d9nvq3402M"
-      frameborder="0"
-      allow="autoplay">
-    </iframe>`;
-  }
+function reveal(){
+  document.getElementById("clickBtn").classList.add("hide");
+  document.getElementById("musicStart").style.display="none";
+
+  const msg=document.getElementById("clickMsg");
+  msg.style.display="block";
+  setTimeout(()=>msg.style.opacity="1",300);
+
+  document.getElementById("yt").innerHTML=`
+    <iframe width="0" height="0"
+    src="https://www.youtube.com/embed/ic8j13piAhQ?autoplay=1"
+    allow="autoplay"
+    style="display:none"></iframe>`;
+}
+
+/* Scroll reveal photos */
+const photos=document.querySelectorAll('.photo');
+window.addEventListener('scroll',()=>{
+  photos.forEach(p=>{
+    if(p.getBoundingClientRect().top < window.innerHeight-80){
+      p.classList.add('show');
+    }
+  });
 });
 
-// TYPING TEXT (fixed spacing)
-const message =
-"My Love ❤️\n\n" +
-"You are the most special person in my life 🥺\n\n" +
-"I may not say it every day,\n" +
-"but you mean the world to me 💕\n\n" +
-"I miss you so much 😭❤️\n\n" +
-"So I coded this little surprise,\n" +
-"just for YOU 💻❤️\n\n" +
-"I love you endlessly 💖 — Sneha";
-
-let i = 0;
-function type(){
-  if(i < message.length){
-    const ch = message.charAt(i);
-    document.getElementById("text").innerHTML += (ch === "\n") ? "<br>" : ch;
-    i++;
-    setTimeout(type,45);
-  }
-}
-type();
-
-// FLOATING HEARTS
-function hearts(){
-  const heart = document.createElement("div");
-  heart.className = "heart";
-  heart.innerText = "❤️";
-  heart.style.left = Math.random()*100+"vw";
-  heart.style.fontSize = (Math.random()*20+15)+"px";
-  document.body.appendChild(heart);
-  setTimeout(()=>heart.remove(),6000);
-}
-setInterval(hearts,300);
+/* Floating hearts */
+setInterval(()=>{
+  const h=document.createElement("div");
+  h.className="heart";
+  h.innerText=["❤️","💖","💕","💘"][Math.floor(Math.random()*4)];
+  h.style.left=Math.random()*100+"vw";
+  h.style.fontSize=(Math.random()*14+14)+"px";
+  h.style.animationDuration=(Math.random()*4+6)+"s";
+  document.body.appendChild(h);
+  setTimeout(()=>h.remove(),10000);
+},500);
 </script>
 
 </body>
