--- a/index.html
+++ b/index.html
@@ -151,12 +151,13 @@ h1{
   <div id="msg">
 My Love — Divv Ji (Ladduu, Motuu Bacchaa) 🐼❤️
 
-No Matter How Far You Are, My Heart Knows Where It Belongs 💌  
-Every Day, Every Moment, Every Feeling —  
-It Quietly Finds Its Way Back To You.... 🫂💗
-This Little Space Is Made Just For You 🫶  
-With All My Love, My Care, And Every Thought Of You 🥰  
-Everything Here Holds A Piece Of What I Feel For You ....💖
+No matter how far you are, my heart knows where it belongs 💌  
+Every day, every moment, every feeling —  
+It quietly finds its way back to you.....🫂💗
+    
+This little space is made just for you 🫶  
+With all my love, my care, and every thought of you 🥰  
+Everything here holds a piece of what i feel for you.....💖
 
 I Miss Youuuuuu 🥺  
 I Love Youuuu Endlessly, Deeply, Truly ❤️  
@@ -236,3 +237,4 @@ setInterval(()=>{
 
 </body>
 </html>
+
