--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ function reveal(){
 
   document.getElementById("yt").innerHTML=`
     <iframe width="0" height="0"
-    src="https://www.youtube.com/embed/ic8j13piAhQ?autoplay=1"
+    src="https://youtu.be/zlt38OOqwDc?si=cyJts-Wz69B8-YIc?autoplay=1&start=57""
     allow="autoplay"
     style="display:none"></iframe>`;
 }
@@ -237,4 +237,5 @@ setInterval(()=>{
 
 </body>
 </html>
+
 
