--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ Every day, every moment, every feeling —
 It quietly finds its way back to you.....🫂💗
     
 This little space is made just for you 🫶  
-With all my love, my care, and every thought of you 🥰  
+With all my love 🥰  
 Everything here holds a piece of what i feel for you.....💖
 
 I Miss Youuuuuu 🥺  
@@ -170,7 +170,7 @@ I Love Youuuu Endlessly, Deeply, Truly ❤️
     Open My Heart 💖
   </button>
   
-  <audio id="bgMusic">
+  <audio id="bgMusic" loop>
     <source src="raabta.mp3" type="audio/mpeg">
   </audio>
   
@@ -235,6 +235,7 @@ setInterval(()=>{
 
 </body>
 </html>
+
 
 
 
