--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@ function reveal() {
     const music = document.getElementById("bgMusic");
     music.play();
 
+    document.getElementById("photos").style.display = "block";
+
     // smooth scroll ONLY after correct password
     window.scrollTo({
       top: document.body.scrollHeight,
@@ -251,6 +253,7 @@ setInterval(()=>{
 
 </body>
 </html>
+
 
 
 
